security: Improve authentication and authorization
- Implement Refresh Token Rotation
  * Generate new refresh token on refresh request
  * Blacklist old refresh tokens to prevent reuse

- Restrict user endpoints by HTTP method
  * POST /api/v1/users: Public (registration only)
  * Other endpoints: Authenticated users only

- Explicit CORS configuration
  * Define allowed headers explicitly
  * Add exposed headers for Authorization header
  * Use List.of() for modern Java style

Security improvements:
- Enhanced token theft protection
- Clearer endpoint access rules
- No wildcard header permissions